--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F6F7F8"
+    android:background="@drawable/round_back_10"
     tools:context=".ui.home.HomeFragment">
 
     <RelativeLayout
@@ -56,15 +56,20 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/musicRecyclerView"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_above="@+id/bottomBar"
         android:layout_below="@+id/topBar"
+        android:layout_height="match_parent"
         android:layout_marginBottom="10dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/musicRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
+    </com.google.android.material.card.MaterialCardView>
+
 
     <LinearLayout
         android:id="@+id/bottomBar"
@@ -119,16 +124,15 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/btnPrevious"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="20dp"
                 android:background="#7960E5"
-                android:padding="10dp"
                 android:src="@drawable/ic_previous" />
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
                 android:id="@+id/playPauseCard"
                 android:layout_width="90dp"
                 android:layout_height="100dp"
@@ -145,16 +149,16 @@
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_play" />
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/btnNext"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
                 android:background="#7960E5"
-                android:padding="10dp"
                 android:src="@drawable/ic_next" />
         </LinearLayout>
     </LinearLayout>
+
 </RelativeLayout>
