--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,164 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/round_back_10"
-    tools:context=".ui.home.HomeFragment">
+<layout>
 
-    <RelativeLayout
-        android:id="@+id/topBar"
+    <data>
+
+        <import type="com.mblhcmute.musicplayerpro.ui.home.HomeScreenState" />
+
+        <variable
+            name="vm"
+            type="com.mblhcmute.musicplayerpro.ui.home.HomeViewModel" />
+    </data>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="10dp">
-
-        <LinearLayout
-            android:id="@+id/btnMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/round_back_10">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/ic_menu" />
-        </LinearLayout>
-
-        <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="-65dp"
-            android:layout_marginEnd="240dp"
-            android:text="Music Player Pro"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:id="@+id/btnSearch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/round_back_10">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/ic_search" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_above="@+id/bottomBar"
-        android:layout_below="@+id/topBar"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/musicRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </androidx.recyclerview.widget.RecyclerView>
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <LinearLayout
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical">
+        android:background="@drawable/round_back_10"
+        tools:context=".ui.home.HomeFragment">
 
         <RelativeLayout
+            android:id="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/startTime"
+            <LinearLayout
+                android:id="@+id/btnMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="10dp"
-                android:text="00:00"
-                android:textColor="#0B0A0A"
-                android:textSize="12sp" />
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/round_back_10">
 
-            <SeekBar
-                android:id="@+id/playerSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toStartOf="@+id/endTime"
-                android:layout_toEndOf="@+id/startTime"
-                android:max="100"
-                android:progress="50"
-                android:progressDrawable="@drawable/custom_seekbar"
-                android:thumb="@drawable/custom_thumb" />
-
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_menu" />
+            </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/endTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="-65dp"
+                android:layout_marginEnd="240dp"
+                android:text="Music Player Pro"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/btnSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:text="00:00"
-                android:textColor="#0B0A0A"
-                android:textSize="12sp" />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/btnPrevious"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:background="#7960E5"
-                android:src="@drawable/ic_previous" />
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/playPauseCard"
-                android:layout_width="90dp"
-                android:layout_height="100dp"
-                android:outlineAmbientShadowColor="#7960E5"
-                android:outlineSpotShadowColor="#7960E5"
-                app:cardBackgroundColor="#7960E5"
-                app:cardCornerRadius="20dp"
-                app:cardElevation="10dp"
-                app:cardUseCompatPadding="true">
+                android:background="@drawable/round_back_10">
 
                 <ImageView
-                    android:id="@+id/playPauseImg"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_play" />
-            </com.google.android.material.card.MaterialCardView>
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/ic_search" />
+            </LinearLayout>
+        </RelativeLayout>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/btnNext"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="20dp"
-                android:background="#7960E5"
-                android:src="@drawable/ic_next" />
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottomBar"
+            android:layout_below="@+id/topBar"
+            android:layout_marginBottom="10dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/musicRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </androidx.recyclerview.widget.RecyclerView>
+        </com.google.android.material.card.MaterialCardView>
+
+
+        <LinearLayout
+            android:id="@+id/bottomBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/currentTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:textColor="#0B0A0A"
+                    android:textSize="12sp" />
+
+                <com.google.android.material.slider.Slider
+                    android:id="@+id/playerSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/endTime"
+                    android:layout_toEndOf="@+id/currentTime"
+                    android:valueFrom="0"
+                    android:valueTo="100"
+                    android:progress="0"
+                    android:progressDrawable="@drawable/custom_seekbar"
+                    android:thumb="@drawable/custom_thumb" />
+
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/endTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="#0B0A0A"
+                    android:textSize="12sp" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnPrevious"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginEnd="20dp"
+                    app:fabCustomSize="50dp"
+                    android:backgroundTint="#7960E5"
+                    android:onClick="@{() -> vm.onClick(HomeScreenState.PreviousClick)}"
+                    android:src="@drawable/ic_previous"
+                    tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/playPauseCard"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:backgroundTint="#7960E5"
+                    android:onClick="@{() -> vm.onClick(HomeScreenState.PlayPauseClick)}"
+                    app:fabCustomSize="90dp"
+                    app:setPlayImage="@{safeUnbox(vm.isPlaying)}"
+                    tools:src="@drawable/ic_play" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnNext"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="20dp"
+                    android:backgroundTint="#7960E5"
+                    android:onClick="@{() -> vm.onClick(HomeScreenState.NextClick)}"
+                    app:fabCustomSize="50dp"
+                    android:src="@drawable/ic_next" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
