--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -10,14 +12,11 @@
             type="com.mblhcmute.musicplayerpro.ui.home.HomeViewModel" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/round_back_10"
         tools:context=".ui.home.HomeFragment">
-
         <RelativeLayout
             android:id="@+id/topBar"
             android:layout_width="match_parent"
@@ -141,20 +140,20 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="20dp"
-                    app:fabCustomSize="50dp"
                     android:backgroundTint="#7960E5"
                     android:onClick="@{() -> vm.onClick(HomeScreenState.PreviousClick)}"
                     android:src="@drawable/ic_previous"
+                    app:fabCustomSize="50dp"
                     tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/playPauseCard"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:layout_marginHorizontal="10dp"
                     android:backgroundTint="#7960E5"
                     android:onClick="@{() -> vm.onClick(HomeScreenState.PlayPauseClick)}"
-                    app:fabCustomSize="90dp"
+                    app:fabCustomSize="70dp"
                     app:setPlayImage="@{safeUnbox(vm.isPlaying)}"
                     tools:src="@drawable/ic_play" />
 
@@ -165,8 +164,8 @@
                     android:layout_marginStart="20dp"
                     android:backgroundTint="#7960E5"
                     android:onClick="@{() -> vm.onClick(HomeScreenState.NextClick)}"
-                    app:fabCustomSize="50dp"
-                    android:src="@drawable/ic_next" />
+                    android:src="@drawable/ic_next"
+                    app:fabCustomSize="50dp" />
             </LinearLayout>
         </LinearLayout>
 
