--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.mblhcmute.musicplayerpro.ui.home.HomeFragment"
+        android:name="com.mblhcmute.musicplayerpro.ui.musics.MusicsFragment"
         android:label="@string/title_musics"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_musics" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
