--- a/app/src/main/res/layout/music_adapter_layout.xml
+++ b/app/src/main/res/layout/music_adapter_layout.xml
@@ -18,8 +18,7 @@
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:background="@drawable/ic_launcher_background"
-            android:padding="5dp"
-            />
+            android:padding="5dp" />
 
         <LinearLayout
             android:layout_toStartOf="@id/musicDuration"
