--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.notifications.NotificationsFragment">
 
+    <data>
+
+        <import type="com.mblhcmute.musicplayerpro.ui.musics.MusicsScreenState" />
+
+        <variable
+            name="vm"
+            type="com.mblhcmute.musicplayerpro.ui.musics.MusicsViewModel" />
+    </data>
+
     <TextView
         android:id="@+id/text_notifications"
         android:layout_width="match_parent"
