--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.notifications.NotificationsFragment">
+    tools:context=".ui.fragments.notifications.NotificationsFragment">
 
     <data>
 
-        <import type="com.mblhcmute.musicplayerpro.ui.musics.MusicsScreenState" />
+        <import type="com.mblhcmute.musicplayerpro.ui.fragments.musics.MusicsScreenState" />
 
         <variable
             name="vm"
-            type="com.mblhcmute.musicplayerpro.ui.musics.MusicsViewModel" />
+            type="com.mblhcmute.musicplayerpro.ui.fragments.musics.MusicsViewModel" />
     </data>
 
     <TextView
