--- a/app/src/main/res/drawable/custom_seekbar.xml
+++ b/app/src/main/res/drawable/custom_seekbar.xml
@@ -5,7 +5,7 @@
         android:gravity="center_vertical">
 
         <shape android:shape="rectangle">
-            <solid android:color="#1AFFFFFF"/>
+            <solid android:color="@color/md_theme_onSurface"/>
             <corners android:radius="10dp"/>
             <size android:height="5dp"/>
         </shape>
@@ -13,10 +13,9 @@
 
     <item android:id="@android:id/progress"
         android:gravity="center_vertical">
-
         <clip>
             <shape android:shape="rectangle">
-                <solid android:color="#7960E5"/>
+                <solid android:color="@color/md_theme_primary"/>
                 <corners android:radius="10dp"/>
                 <size android:height="5dp"/>
             </shape>
