--- a/app/src/main/res/layout/fragment_musics.xml
+++ b/app/src/main/res/layout/fragment_musics.xml
@@ -15,7 +15,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/round_back_10"
+        android:background="@color/md_theme_onPrimary"
         tools:context=".ui.fragments.musics.MusicsFragment">
         <RelativeLayout
             android:id="@+id/topBar"
@@ -29,9 +29,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/round_back_10">
+                android:background="@color/md_theme_onPrimary">
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_margin="10dp"
@@ -56,9 +56,9 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/round_back_10">
+                android:background="@color/md_theme_onPrimary">
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_margin="10dp"
@@ -99,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
-                    android:textColor="#0B0A0A"
+                    android:textColor="@color/md_theme_onSurface"
                     android:textSize="12sp" />
 
                 <com.google.android.material.slider.Slider
@@ -123,7 +123,7 @@
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="10dp"
-                    android:textColor="#0B0A0A"
+                    android:textColor="@color/md_theme_onSurface"
                     android:textSize="12sp" />
 
             </RelativeLayout>
@@ -140,7 +140,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="20dp"
-                    android:backgroundTint="#7960E5"
+                    android:backgroundTint="@color/md_theme_inversePrimary"
                     android:onClick="@{() -> vm.onClick(MusicsScreenState.PreviousClick)}"
                     android:src="@drawable/ic_previous"
                     app:fabCustomSize="50dp"
@@ -151,10 +151,11 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginHorizontal="10dp"
-                    android:backgroundTint="#7960E5"
+                    android:backgroundTint="@color/md_theme_inversePrimary"
                     android:onClick="@{() -> vm.onClick(MusicsScreenState.PlayPauseClick)}"
                     app:fabCustomSize="70dp"
                     app:setPlayImage="@{safeUnbox(vm.isPlaying)}"
+                    tools:ignore="SpeakableTextPresentCheck"
                     tools:src="@drawable/ic_pause" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -162,10 +163,11 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="20dp"
-                    android:backgroundTint="#7960E5"
+                    android:backgroundTint="@color/md_theme_inversePrimary"
                     android:onClick="@{() -> vm.onClick(MusicsScreenState.NextClick)}"
                     android:src="@drawable/ic_next"
-                    app:fabCustomSize="50dp" />
+                    app:fabCustomSize="50dp"
+                    tools:ignore="SpeakableTextPresentCheck" />
             </LinearLayout>
         </LinearLayout>
 
