--- a/app/src/main/res/layout/music_adapter_layout.xml
+++ b/app/src/main/res/layout/music_adapter_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="@color/md_theme_onPrimary">
 
     <RelativeLayout
         android:id="@+id/rootLayout"
@@ -11,13 +11,13 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/round_back_10">
+        android:background="@color/md_theme_secondaryContainer">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/musicImage"
             android:layout_width="65dp"
             android:layout_height="65dp"
-            android:background="@drawable/ic_launcher_background"
+            android:background="@drawable/ic_baseline_music_note_24"
             android:padding="5dp" />
 
         <LinearLayout
@@ -38,14 +38,16 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#FFFFFF"/>
+                android:text="Song"
+                android:textColor="@color/md_theme_onSurface"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/musicArtist"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
-                android:textColor="#CCFFFFFF"/>
+                android:text="Singer"
+                android:textColor="@color/md_theme_onSurfaceVariant"/>
 
         </LinearLayout>
 
@@ -56,7 +58,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="20dp"
-            android:textColor="#CCFFFFFF"
+            android:textColor="@color/md_theme_onSurface"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingTop="5dp"
