Thêm nhạc từ firebase vào list.

--- a/app/src/main/res/layout/fragment_musics.xml
+++ b/app/src/main/res/layout/fragment_musics.xml
@@ -34,8 +34,8 @@
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/ic_menu" />
+                    android:layout_margin="10dp"/>
+<!--                    android:src="@drawable/ic_menu" />-->
             </LinearLayout>
 
             <com.google.android.material.textview.MaterialTextView
@@ -61,8 +61,8 @@
                 <com.google.android.material.imageview.ShapeableImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_margin="10dp"
-                    android:src="@drawable/ic_search" />
+                    android:layout_margin="10dp"/>
+<!--                    android:src="@drawable/ic_search" />-->
             </LinearLayout>
         </RelativeLayout>
 
