--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,84 +9,72 @@
 
         <variable
             name="vm"
-            type="com.mblhcmute.musicplayerpro.ui.fragments.musics.MusicsViewModel" />
+            type="com.mblhcmute.musicplayerpro.ui.fragments.player.PlayerViewModel" />
     </data>
 
     <RelativeLayout
+        android:id="@+id/mContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/md_theme_onPrimary"
-        tools:context=".ui.fragments.musics.MusicsFragment">
+        android:background="@drawable/main_bg"
+        tools:context=".ui.fragments.player.PlayerFragment">
+
         <RelativeLayout
-            android:id="@+id/topBar"
+            android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp">
+            android:layout_height="350dp"
+            android:layout_alignParentTop="true">
 
-            <LinearLayout
-                android:id="@+id/btnMenu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/md_theme_onPrimary">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/coverArt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/ic_music" />
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-<!--                    android:src="@drawable/ic_menu" />-->
-            </LinearLayout>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="-65dp"
-                android:layout_marginEnd="240dp"
-                android:text="Music Player Pro"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:id="@+id/btnSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="@color/md_theme_onPrimary">
-
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"/>
-<!--                    android:src="@drawable/ic_search" />-->
-            </LinearLayout>
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imageViewGradient"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/gradient_bg" />
         </RelativeLayout>
 
-        <com.google.android.material.card.MaterialCardView
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/songName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/bottomBar"
-            android:layout_below="@+id/topBar"
-            android:layout_marginBottom="10dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/card"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:singleLine="true"
+            android:text="Song name!"
+            android:textColor="@color/md_theme_surface"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/musicRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </androidx.recyclerview.widget.RecyclerView>
-        </com.google.android.material.card.MaterialCardView>
-
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/songSinger"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/songName"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:ellipsize="end"
+            android:gravity="center_horizontal"
+            android:singleLine="true"
+            android:text="Song Singer!"
+            android:textColor="@color/md_theme_surface"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:id="@+id/bottomBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:background="@color/md_theme_onSurfaceVariant"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -109,11 +97,11 @@
                     android:layout_centerVertical="true"
                     android:layout_toStartOf="@+id/endTime"
                     android:layout_toEndOf="@+id/currentTime"
-                    android:valueFrom="0"
-                    android:valueTo="100"
                     android:progress="0"
                     android:progressDrawable="@drawable/custom_seekbar"
-                    android:thumb="@drawable/custom_thumb" />
+                    android:thumb="@drawable/custom_thumb"
+                    android:valueFrom="0"
+                    android:valueTo="100" />
 
 
                 <com.google.android.material.textview.MaterialTextView
