--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,7 @@
         android:title="@string/title_musics" />
 
     <item
-        android:id="@+id/navigation_album"
+        android:id="@+id/navigation_player"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_album" />
-
-    <item
-        android:id="@+id/navigation_information"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_information" />
-
+        android:title="@string/title_player" />
 </menu>
